--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "axios": "^0.18.0",
     "react": "^16.2.0",
+    "react-currency-input": "^1.3.6",
     "react-dom": "^16.2.0",
+    "react-number-format": "^3.1.6",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
     "semantic-ui-css": "^2.3.0",
