--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "auth0-js": "^9.3.0",
     "axios": "^0.18.0",
     "react": "^16.2.0",
     "react-currency-input": "^1.3.6",
