--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "react": "^16.2.0",
+    "react-accessible-accordion": "^2.0.0",
     "react-currency-input": "^1.3.6",
     "react-dom": "^16.2.0",
     "react-number-format": "^3.1.6",
