--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-number-format": "^3.1.6",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
+    "react-slick": "^0.19.0",
     "semantic-ui-css": "^2.3.0",
     "semantic-ui-react": "^0.78.2"
   },
