--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "auth0-js": "^9.3.0",
     "axios": "^0.18.0",
+    "querystring": "^0.2.0",
     "react": "^16.2.0",
     "react-currency-input": "^1.3.6",
     "react-dom": "^16.2.0",
