--- a/package.json
+++ b/package.json
@@ -7,14 +7,15 @@
     "axios": "^0.18.0",
     "querystring": "^0.2.0",
     "react": "^16.2.0",
+    "react-currency-formatter": "^1.1.0",
     "react-currency-input": "^1.3.6",
     "react-dom": "^16.2.0",
-    "react-number-format": "^3.1.6",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
     "react-slick": "^0.19.0",
     "semantic-ui-css": "^2.3.0",
-    "semantic-ui-react": "^0.78.2"
+    "semantic-ui-react": "^0.78.2",
+    "sweetalert": "^2.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
